# NRip

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: fs_safemove.rs  graveyard.rs  index.rs  lib.rs  main.rs  paths.rs  safety.rs  ui.rs
tests/: cli_bury.rs  cli_cremate.rs  cli_edge_cases.rs  cli_errors.rs  cli_flags_simple.rs  cli_fzf.rs  cli_list.rs  cli_resurrect_hierarchy.rs  cli_safety.rs  lib_bury.rs  properties.rs  util.rs
