[package]
name = "nrip"
version = "0.8.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Safe rm with a graveyard (MVP: rm, ls, prune, resurrect)"
repository = "https://forgejo.dirty-flix-servarr.fr:2222/Samda/NRip.git"
homepage = "https://github.com/Samtroulcode/NRip"
keywords = ["cli", "rm", "safe", "trash", "fzf"]
categories = ["command-line-utilities"]

[dependencies]
fs-err = "3"
fd-lock = "4"
tempfile = "3"
rustix = "1.0"
base64 = "0.22"
libc = "0.2"
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
dirs = "6.0.0"
rand = { version = "0.9.2", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1.1"
predicates = "3"
tempfile = "3"
proptest = "1"
rstest = "0.26"
serial_test = "3"
which = "8"
